# conhid

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  calibration.h  controller.cpp  controller.h  initializer.cpp  initializer.h  main.c  main.cpp  structs.h  transport.c  transport.h  virtualdevice.cpp  virtualdevice.h
btle-probe/: gui.py  probe  probe.c
c/: ble_transport.c  ble_transport.h
docs/: init.md  joycon.md  procon.md
old/: CMakeLists.txt  calibration.c  commands.h  controller.c  controller.h  initializer.c  initializer.h  virtualdevice.c  virtualdevice.h
old/btle-probe/: commands.h  probe  probe.c
old/transport-test/: CMakeLists.txt  TODO
old/transport-test/src/: responses.h  transport.h  transport_ble.c  transport_usb.c
old/transport-test/tools/: sw2ctl.c
src/: controller.rs  main.rs  packet.rs  report.rs  report_05.rs  transport.rs  virtualdevice.rs
src/transport/: ble.rs  usb.rs
transport-test/: CMakeLists.txt
transport-test/src/: commands.h  responses.h  transport.h  transport_ble.c  transport_usb.c
transport-test/tools/: sw2ctl.c
